@@ -2,6 +2,11 @@
 Version 1.0.2, Aug 3, 2006
 -------------------------------
 
+JDO:   Resolved issue CASTOR-1487 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
+       Fixed bug in Castor's EHCache implementation.
+       Details: http://jira.codehaus.org/browse/CASTOR-1487
+       (Ralf - 20060803)
+
 XML:   Resolved issue CASTOR-1477 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Fixed problem to source code generator ignoring -nomarshall, -testable options.
        Details: http://jira.codehaus.org/browse/CASTOR-1477
